samples/_failures_safe/1761448864_41a1bd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8346d953.c: In function ‘main’:
./samples/SAFE/__tmp_8346d953.c:139:17: error: expected expression at end of input
  139 |                 if ((matrix1[i][j] > 0 && matrix2[i][j] > INT_MAX - matrix1[i][j]) ||
      |                 ^~
./samples/SAFE/__tmp_8346d953.c:139:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8346d953.c:139:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8346d953.c:139:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8346d953.c:139:17: error: expected declaration or statement at end of input
